# open-notebook-lm

./: .env  .env.template  README.md  main.py  main.sh  pyproject.toml
docs/: README.md  phase_1a_text_ingestion.md  phase_tracking.md
src/: __init__.py
src/config/: settings.py
src/models/: note.py  source.py
src/services/: llm.py  note.py  pdf_parser.py  source.py  text_processing.py  vector_store.py
src/ui/: app.py
